--- a/optimization.tex
+++ b/optimization.tex
@@ -28,17 +28,13 @@
 \section{Optimization Enhancement}
 \label{Sec:Opt}
 
-Cerberus can be further enhanced with different optimizations when making scheduling decision
-for jobs waiting in each queue.
-This section defines two types of optimization problems used for scheduling jobs in one of its 3 phases,
-both of which are solved by dynamic programming.
+Cerberus can be further enhanced using various optimizations when making the scheduling decisions for jobs in each queue. This section defines two types of optimization techniques used for scheduling jobs in one of the three phases. We compute the solutions using dynamic programming.
 
 \subsection{Scheduling Optimization in Stage-In Phase}
 
-In the stage-in phase, jobs require only for burst buffer.
-Cerberus schedule jobs in $Q_I$ based on their burst buffer demand $bb\_in$.
-To maximize burst buffer's utilization,
-one can schedule jobs according to the following optimization:
+In the stage-in phase, jobs are required only for the burst buffer.
+Cerberus schedules the jobs in $Q_I$ based on their burst buffer demands $bb\_in$.
+To maximize burst buffer's utilization, one can schedule the jobs according to the following optimization:
 \begin{align*}
         \mathbf{Problem} & \text{ } \mathbf{1} \\
         \max &\sum_{i\in J_{Q_I}} bb\_in_i \cdot x_i \\
@@ -59,9 +55,9 @@ one can schedule jobs according to the following optimization:
                 %%\end{array} 
         %%\right.
 %\end{align*}
-where $J_{Q_I}$ stands for all jobs in input queue,
+where $J_{Q_I}$ stands for all jobs in the input queue,
 $bb\_in_i$ is the burst buffer demand of $job_i$,
-$BB_{available}$ is system's currently available capacity of burst buffer.
+$BB_{available}$ is the system's current available capacity of the burst buffer.
 We denote the set of jobs that achieve the maximum data transfer throughput as
 $\mathcal{J} = \{x_i|x_i = 1, \text{ } \forall i \in J_{Q_I}\}$.
 
@@ -105,18 +101,17 @@ $\mathcal{J} = \{x_i|x_i = 1, \text{ } \forall i \in J_{Q_I}\}$.
 
 
 
-\subsection{Scheduling Optimization in Running Phase}
-Running jobs require not only compute nodes, but also like to utilize burst buffer to enhance performance.
+\subsection{Scheduling Optimization in the Running Phase}
+Running jobs not only require the compute nodes, but also utilize the burst buffer to enhance the performance.
 Here we take a general strategy by defining the \textbf{profit} of $job_i$
-in $Q_R$ as it is using $c_i$ compute nodes and $bb\_run_i$ amount of burst buffer
+in $Q_R$ as it uses $c_i$ compute nodes and $bb\_run_i$ amount of the burst buffer
 \begin{equation}
         p_i = f(c_i, bb\_run_i, ert_i)
 \label{Equ:GeneralProfit}
 \end{equation}
 where $ert_i$ is the expected running time of $job_i$.
 
-Similar to 0-1 knapsack problem, the objective is to maximize the total profit
-of jobs in running queue, formularized as
+Similar to the 0-1 knapsack problem, the objective is to maximize the total profit of jobs in the running queue, formularized as
 \begin{align*}
         \mathbf{Problem} & \text{ } \mathbf{2} \\
         \max &\sum_{i \in J_{Q_R}} p_i \cdot x_i \\
@@ -128,20 +123,20 @@ of jobs in running queue, formularized as
                 \end{array} 
         \right.
 \end{align*}
-where $J_{Q_R}$ is the set of jobs in running queue,
-$CN_{available}$ and $BB_{available}$ represent the amount of system's currently available resources.
-We denote the set of jobs who gives the maximum profit as
+where $J_{Q_R}$ is the set of jobs in the running queue,
+$CN_{available}$ and $BB_{available}$ represent the amount of system's current available resources.
+We denote the set of jobs who have the maximum profit as
 $\mathcal{J}  = \{x_i|x_i=1, \text{ } \forall i \in J_{Q_R}\}$.
 
-As an example, in this paper we measure the value of a job based on how efficient it utilize its resource:
+As an example, we measure the value of a job based on how efficient one utilize its resource:
 \begin{equation}
         p_i = \frac{c_i / CN}{ert_i} \times \frac{bb\_run_i / BB}{ert_i}
         \label{Equ:DefValue}
 \end{equation}
-Here, efficiency is measured as the ratio of job's resource demand size to its expected running time,
-where the share of requested compute nodes ($c_i/CN$) and burst buffer ($bb\_run/BB$) are used to
-represent demand size.
-Specializing Problem 2 using \equref{Equ:DefValue} in fact favors tasks that claim to take up resources with short duration, as we shall see in Section~\ref{Sec:Experiments}.
+Here, efficiency is measured as the ratio of the job resource demand to the expected job running time,
+where the share of the requested compute nodes ($c_i/CN$) and the burst buffer ($bb\_run/BB$) are used to
+represent the demand size.
+Specializing Problem 2 using \equref{Equ:DefValue} in fact favors tasks that claim to take up the resources with a short duration, as we will discuss in Section~\ref{Sec:Experiments}.
 %\begin{align*}
         %& \max \sum_{i \in S}\frac{c_i}{ert_i} * \frac{bb\_run_i}{ert_i} \\
         %& s.t. \left\{
@@ -153,11 +148,10 @@ Specializing Problem 2 using \equref{Equ:DefValue} in fact favors tasks that cla
         %\right.
 %\end{align*}
 
-\subsection{Scheduling Optimization in Stage-Out Phase}
+\subsection{Scheduling Optimization in the Stage-Out Phase}
 
-Stage-out phase scheduling are made based on the value of $bb\_out$ of jobs in $Q_O$.
-Optimization formula for stage-out phase are almost the same as
-Problem 1, except that $bb\_in_i$ is replaced with $bb\_out_i$,
+The stage-out phase scheduling is designed based on the value of $bb\_out$ of the jobs in $Q_O$.
+The optimization formula for the stage-out phase are almost the same as the ones in Problem 1, except that $bb\_in_i$ is replaced with $bb\_out_i$, and
 $J_{Q_I}$ is replaced with $J_{Q_O}$, the job set of output queue.
 
 
@@ -211,27 +205,25 @@ $J_{Q_I}$ is replaced with $J_{Q_O}$, the job set of output queue.
 % This will give us only the partial optimal solution
 % in exchange of less computation complexity.
 
-It is trivial to show that optimization Problem 1
-is equivalent to 0-1 knapsack problem.
-Problem 2 can be informally treat as 2-dimension 0-1 knapsack problem.
+It is trivial to show that the optimization of Problem 1
+is equivalent to the 0-1 knapsack problem.
+Problem 2 can be informally treat as the 2-dimension 0-1 knapsack problem.
 We expect all of them to be NP-hard problems.
-Dynamic programming is adopted to solve them in pseudo polynomial time.
+Dynamic programming is adopted to solve them in a pseudo polynomial time.
 Applying memorization could also help accelerate the solving process.
 In addition, we are not interested in the optimal result of
 Problem 1 and Problem 2,
-but in a combination of jobs $\mathcal{J}$ that yields the optimal solution,
-which, fortunately, can also be tracked back down
-using the memorizations kept during dynamic programming.
+but in a combination of jobs $\mathcal{J}$ that yields to the optimal solution,
+which, fortunately, can also be tracked back down using the memorizations stored during the dynamic programming execution.
 %How to fill in memo and track back optimal $\mathcal{J}$ are shown in Algorithm~\ref{Alg:MaxBB}
 %and Algorithm~\ref{Alg:MaxCPU} for Problem 1
 %and Problem 2 respectively.
 %The time complexity of Algorithm~\ref{Alg:MaxBB} is $O(n\times BB)$.
 %The time complexity of solving Algorithm~\ref{Alg:MaxCPU} is $O(n\times CN\times BB)$.
-For Problem 1, the recursive relationship is
-given by \equref{Equ:MaxTransferDataRecursion}.
+For Problem 1, the recursive relationship is given by \equref{Equ:MaxTransferDataRecursion}.
 The recursion that solves Problem 2 is given by \equref{Equ:MaxProductRecursion}.
-Solving \equref{Equ:MaxTransferDataRecursion} and
-backtracking $\mathcal{J}_{Q_I}$ or $\mathcal{J}_{Q_O}$ in total takes time proportional to $n\times BB$.
+Solving \equref{Equ:MaxTransferDataRecursion} and 
+backtracking $\mathcal{J}_{Q_I}$ or $\mathcal{J}_{Q_O}$ in total takes some time that is proportional to $n\times BB$.
 Similarly, solving \equref{Equ:MaxProductRecursion} and selecting $\mathcal{J}_{Q_R}$ using memo
 are $O(n\times CN\times BB)$.
 
