--- a/experiments.tex
+++ b/experiments.tex
@@ -19,7 +19,7 @@ This section evaluates Cerberus by answering three key questions.
 \begin{itemize}
         \item \textbf{Q1}: Does the use of burst buffer 
                 improve both system-level and job-level performance?
-        \item \textbf{Q2}: What are the benefits of using the three phase scheduling? 
+        \item \textbf{Q2}: What are the benefits of using the three phase scheduling?
         \item \textbf{Q3}: Can dynamic programming based optimization enhance the performance of Cerberus?
 \end{itemize}
 
@@ -33,8 +33,7 @@ This section evaluates Cerberus by answering three key questions.
 % a fixed time period (500 seconds), measures the performance of computing system.
 
 %==============XY===================
-We select three evaluation metrics, \textit{job response time}, \textit{job waiting time} and 
-\textit{system throughput}.
+We select three evaluation metrics, \textit{job response time}, \textit{job waiting time} and \textit{system throughput}.
 Job response time is the time duration between the job submission and the job completion. Job waiting time is the total time that a job waits in each queue.
 System throughput is defined as the number of jobs completed in a fixed time period (500 seconds).
 
@@ -115,14 +114,14 @@ $data\_in$ follows the uniform distribution between 1 GB and 30 GB.
 %=============XY==============
 
 PFS is mounted by all the compute nodes in the Trinity architecture, thus applications have the
-option to bypass the burst buffer and to use the file system directly for their IO operations. 
+option to bypass the burst buffer and to use the file system directly for their IO operations.
 We refer this scenario as \textit{Direct IO}. Apparently, the performance of \textit{Direct IO}
-is limited by the low bandwidth of the IO nodes. However, applications will be exempted from 
+is limited by the low bandwidth of the IO nodes. However, applications will be exempted from
 waiting in the stage-in and stage-out phases in the case of \textit{Direct IO} rather than utilizing the burst buffer.
 In this section, we compare the performance of applications utilizing the burst buffer
 against \textit{Direct IO}.
 Based on the comparison, we answer question \textbf{Q1}: by utilizing burst buffer nodes,
-both the job-level and system-level performance can be significantly improved. 
+both the job-level and system-level performance can be significantly improved.
 
 
 % Figure~\ref{Fig:DirectIOvsBBResponse} compares CDF of the response time of 1185 jobs.
@@ -258,7 +257,7 @@ Therefore, users are encouraged to provide detailed burst buffer demands in each
 In Figure~\ref{Fig:3Pvs1PResponse}, the scheduling results based on three models
 are presented:
 \begin{itemize}
-        \item \textbf{1-Phase-1D}: Jobs are submitted with the total burst buffer demand, 
+        \item \textbf{1-Phase-1D}: Jobs are submitted with the total burst buffer demand,
         but their lifetime are not divided into three phases. 
 	Instead, the scheduler makes scheduling decision only once for each job.
 
@@ -323,9 +322,9 @@ the worst absolute response time is less than 379,026 seconds.
 This is about 10.24\% improvement to 3-phase-modeled jobs.
 When Cerberus only knows the upper bound of data demand,
 it is 23.66\% better than the slowest 1-phase-modeled job.
-In average, \textit{more than 80\% of the jobs 
+In average, \textit{more than 80\% of the jobs
 modeled by 3-phase-3D finish earlier than 1-phase-modeled jobs.}
-Meanwhile, \textit{more than 60\% of the jobs take less time if user 
+Meanwhile, \textit{more than 60\% of the jobs take less time if user
 specifies data usage demand at each phase, e.g., 3-Phase-3D vs. 3-Phase-1D.}
 
 
@@ -358,9 +357,9 @@ specifies data usage demand at each phase, e.g., 3-Phase-3D vs. 3-Phase-1D.}
 
 
 %==============XY===============
-We now investigate the detailed waiting time to understand why the scheduling results in Cerberus are better than the 
-naive integration of the batch scheduler with the burst buffer constraints.
-Figure~\ref{Fig:3Pvs1PWaitRun} shows the time that a job spent in the running queue.
+We now investigate the detailed waiting time to understand why the scheduling results in Cerberus
+are better than the naive integration of the batch scheduler with the burst buffer constraints.
+Figure~\ref{Fig:3Pvs1PWaitRun} shows the waiting running time, how long a job spent in the running queue.
 There are three queues in Cerberus;
 correspondingly we have three kinds of job waiting in Cerberus.
 %Figure~\ref{Fig:3Pvs1PWaitIn} shows the time job spend in inputing queue,
@@ -368,8 +367,8 @@ correspondingly we have three kinds of job waiting in Cerberus.
 For 1-phase-modeled jobs, there is just one queue;
 Therefore, the waiting time in Figure~\ref{Fig:3Pvs1PWaitRun} is the total waiting time.
 We observe that the jobs did not take much time either in the input queue $Q_I$ nor in the output queue.
-The upper bounds of time spent in the input queue are
-2,500 seconds (\textbf{missing a value here?}) for 3-Phase-1D and 3-Phase-3D modeled jobs respectively.
+The upper bounds of time spent in the input queue is 
+2,500 seconds for both 3-Phase-1D and 3-Phase-3D modeled jobs.
 This is because that the input data are very small (e.g., tens of GB)
 compared to the checkpointing data and the application output (e.g., tens of TB).
 In contrast, in the worst case of 1-Phase-1D, the job waiting time is 443,203 seconds,
@@ -377,7 +376,7 @@ because the scheduler makes a one-time decision based on the demand of the compu
 %the upper bounds of time spent in output queue $Q_O$ are
 %less than 5\% of the total waiting time of 1-phase-scheduler case
 %for both 3-phases cases.
-As for the time waiting for running,  more than 60\% of the 3-Phase-1D and 3-Phase-3D modeled jobs are scheduled, 
+As for the time waiting for running, more than 60\% of the 3-Phase-1D and 3-Phase-3D modeled jobs are scheduled,
 which is much better than the 1-phase-model.
 The differences of the waiting time lead to the difference in response performance.
 
@@ -403,14 +402,16 @@ It helps us to examine the scheduling performance in a time sequence.
 For 1-Phase-1D modeled job, we can see an obvious `throughput gap'
 from 150,000 seconds to 200,000 seconds approximately.
 \textbf{consider revise the following sentences}
-Similar to the case of 3-Phase-1D Cerberus, the throughput also starts provocatively.
+The case of 3-Phase-1D Cerberus is similar.
 3-Phase-3D runs counter to both previous cases.
-Even though there is a throughput between 100,000 to 150,000 seconds, the 3-Phase-3D model manages to make the system having a high throughput at the beginning and
+Even though there is a throughput between 100,000 to 150,000 seconds,
+the 3-Phase-3D model manages to make the system having a high throughput at the beginning and
 later changes from 150,000 to 300,000 seconds.
 \textit{In average, the throughput of the 3-Phase-3D model is 1.575 jobs / 500 seconds.}
 It is 11.39\% (\textbf{higher than?} of the 1-Phase-1D case (1.414 jobs / 500 seconds) and
 31.03\% higher than the 3-Phase-1D case (1.202 jobs / 500 seconds).
-We believe that the results validate the indispensable 3 phase job model and justifies the necessity that a user needs to provide data capacity demand for each phase.
+We believe that the results validate the indispensable 3 phase job model and
+justifies the necessity that a user needs to provide data capacity demand for each phase.
 
 
 
@@ -429,7 +430,7 @@ We believe that the results validate the indispensable 3 phase job model and jus
                 %\label{Fig:3Pvs1PWaitIn}
         %}
         %~
-        \subfloat[Job Wait Run Time \textbf{what is wait run time?}] {
+        \subfloat[Job Waiting Running Time] {
                 \includegraphics[width=2.2in]{3Pvs1PFigures/1000jobs_3p_vs_1p_wait_run}
                 \label{Fig:3Pvs1PWaitRun}
         }
@@ -504,7 +505,7 @@ Specifically, in the stage-in and stage-out phases, Cerberus schedules the jobs 
 according to the solution given by \equref{Equ:MaxTransferDataRecursion};
 for jobs in $Q_R$, Cerberus makes the scheduling decisions
 based on the solution given by \equref{Equ:MaxProductRecursion}. %Algorithm~\ref{Alg:MaxCPU}.
-We denote Cerberus using the two scheduling methodologies 
+We denote Cerberus using the two scheduling methodologies
 as \textbf{FCFS Cerberus} and \textbf{Optimized Cerberus} respectively.
 
 As indicated by Figure~\ref{Fig:DPvsFIFOResponse}, the job response time scheduled by Optimized Cerberus is reduced.
@@ -515,13 +516,22 @@ When we consider the overall response time of the entire job set,
 we observe that more than \textit{80\% of the tasks response faster with the optimization}.
 
 
-The time duration that an application is waiting for running, or the time that an application spent in the running queue,
+The time duration that an application is waiting for running
 is plotted in Figure~\ref{Fig:DPvsFIFOWaitRun}.
-The tail of Optimized Cerberus shows that a couple of jobs spend very long time in the running queue. This is because: First the jobs are submitted at the early middle phase (job \#435 waits for 268,322 seconds); Second, these jobs request a huge amount of compute nodes (10240), but comparably less amount of burst buffer (7 TB for job \#435);
-Third, there are jobs requesting a large number of cores but requesting less running time and a larger amount of burst buffer. For example, job \#434 requests 10,240 compute nodes but the expected running time is only 3,600 seconds and it also requests 59 TB burst buffer.
+The tail of Optimized Cerberus shows that a couple of jobs
+spend very long time in the running queue.
+This is because: First the jobs are submitted at the early middle phase
+(job \#435 waits for 268,322 seconds); Second, these jobs request a huge
+amount of compute nodes (10240), but comparably less amount of burst buffer (7 TB for job \#435);
+Third, there are jobs requesting a large number of cores but requesting
+less running time and a larger amount of burst buffer.
+For example, job \#434 requests 10,240 compute nodes but the expected running time
+is only 3,600 seconds and it also requests 59 TB burst buffer.
 
-As a result, Cerberus favors the jobs with less requesting time and larger burst buffer demand, according to \equref{Equ:MaxProductRecursion}.
-This is interesting because it is a potential flaw in the optimization-based policy: Given that the users know the optimization objective of the scheduler,
+As a result, Cerberus favors the jobs with less requesting time and larger burst buffer demand,
+according to \equref{Equ:MaxProductRecursion}.
+This is interesting because it is a potential flaw in the optimization-based policy:
+Given that the users know the optimization objective of the scheduler,
 it is possible for a user to cheat the scheduler with false demands.
 %In other words, our optimization scheme, even though providing performance enhancement
 %for the waiting time of 70\% jobs, is not strategy-proofness\cite{Ghodsi:NSDI:2011}
@@ -535,7 +545,8 @@ When we look at the time sequence of throughput,
 we found that the peak value 9 jobs / 500 seconds is obtained by the Optimized Cerberus.
 The peak throughput of the FCFS Cerberus is also 9 jobs / 500 seconds.
 The mean throughputs of these three scheduling methods are plotted in Figure~\ref{Fig:DPvsFIFOThroughput}.
-\textit{Compared with the FCFS Cerberus, the Optimized Cerberus achieves about 23.87\% higher average throughput (1.951 jobs / 500 seconds).}
+Compared with the FCFS Cerberus, \textit{the Optimized Cerberus achieves about 23.87\% higher average throughput}
+(1.951 jobs / 500 seconds).
 
 
 %Table~\ref{Tab:OptimizationTime} demonstrate that 
