--- a/optimization.tex
+++ b/optimization.tex
@@ -28,11 +28,14 @@
 \section{Optimization Enhancement}
 \label{Sec:Opt}
 
-Cerberus can be further enhanced using various optimizations when making the scheduling decisions for jobs in each queue. This section defines two types of optimization techniques used for scheduling jobs in one of the three phases. We compute the solutions using dynamic programming.
+Cerberus can be further enhanced using various optimizations
+when making the scheduling decisions for jobs in each queue.
+This section defines two types of optimization techniques used for scheduling jobs in one of the three phases.
+We compute the solutions using dynamic programming.
 
-\subsection{Scheduling Optimization in Stage-In Phase}
+\subsection{Scheduling Optimization in Stage-in Phase}
 
-In the stage-in phase, jobs are required only for the burst buffer.
+In the stage-in phase, jobs require only the burst buffer.
 Cerberus schedules the jobs in $Q_I$ based on their burst buffer demands $bb\_in$.
 To maximize burst buffer's utilization, one can schedule the jobs according to the following optimization:
 \begin{align*}
@@ -101,8 +104,9 @@ $\mathcal{J} = \{x_i|x_i = 1, \text{ } \forall i \in J_{Q_I}\}$.
 
 
 
-\subsection{Scheduling Optimization in the Running Phase}
-Running jobs not only require the compute nodes, but also utilize the burst buffer to enhance the performance.
+\subsection{Scheduling Optimization in Running Phase}
+Running jobs not only require the compute nodes for computation,
+but also utilize the burst buffer to enhance the I/O performance.
 Here we take a general strategy by defining the \textbf{profit} of $job_i$
 in $Q_R$ as it uses $c_i$ compute nodes and $bb\_run_i$ amount of the burst buffer
 \begin{equation}
@@ -148,7 +152,7 @@ Specializing Problem 2 using \equref{Equ:DefValue} in fact favors tasks that cla
         %\right.
 %\end{align*}
 
-\subsection{Scheduling Optimization in the Stage-Out Phase}
+\subsection{Scheduling Optimization in Stage-out Phase}
 
 The stage-out phase scheduling is designed based on the value of $bb\_out$ of the jobs in $Q_O$.
 The optimization formula for the stage-out phase are almost the same as the ones in Problem 1, except that $bb\_in_i$ is replaced with $bb\_out_i$, and
@@ -209,7 +213,7 @@ It is trivial to show that the optimization of Problem 1
 is equivalent to the 0-1 knapsack problem.
 Problem 2 can be informally treat as the 2-dimension 0-1 knapsack problem.
 We expect all of them to be NP-hard problems.
-Dynamic programming is adopted to solve them in a pseudo polynomial time.
+Dynamic programming is adopted to solve them in pseudo-polynomial time.
 Applying memorization could also help accelerate the solving process.
 In addition, we are not interested in the optimal result of
 Problem 1 and Problem 2,
@@ -223,7 +227,7 @@ which, fortunately, can also be tracked back down using the memorizations stored
 For Problem 1, the recursive relationship is given by \equref{Equ:MaxTransferDataRecursion}.
 The recursion that solves Problem 2 is given by \equref{Equ:MaxProductRecursion}.
 Solving \equref{Equ:MaxTransferDataRecursion} and 
-backtracking $\mathcal{J}_{Q_I}$ or $\mathcal{J}_{Q_O}$ in total takes some time that is proportional to $n\times BB$.
+backtracking $\mathcal{J}_{Q_I}$ or $\mathcal{J}_{Q_O}$ in total take time proportional to $n\times BB$.
 Similarly, solving \equref{Equ:MaxProductRecursion} and selecting $\mathcal{J}_{Q_R}$ using memo
 are $O(n\times CN\times BB)$.
 
