modify ABSTRACT based on Lan's comments

--- a/bbscheduler.tex
+++ b/bbscheduler.tex
@@ -455,11 +455,11 @@ manage resource allocation in different phases.
 In both stage-in and stage-out phases, Cerberus
 allocates the burst buffer resources to achieve the maximum data transfer throughput
 between burst buffer and the external storage system.
-In the running phase, Cerberus maximizes the predefined profit of the scheduled jobs.
-The simulation results %of Cerberus scheduling the BB-enabled supercomputer platform 
-demonstrate that
-1) compared to non-burst-buffer systems, Cerberus accelerates the execution pipeline of all tasks and reduces the response time of 99\% jobs;
-2) on burst-buffer-enabled systems, the three-phase Cerberus and the burst buffer oriented optimization increase the average system throughput by 62.31\%.
+In the running phase, Cerberus maximizes the predefined objectives of job scheduling.
+We evaluate our design through extensive event driven simulations. 
+Our preliminary results demonstrate that
+1) compared to non-burst-buffer systems, Cerberus accelerates the job execution and reduces the job response time;
+2) our 3-phase design boosts the average system throughput by 62.31\%.
 \end{abstract}
 
 % no keywords
