--- a/ref.bib
+++ b/ref.bib
@@ -20,6 +20,13 @@
         howpublished = "\url{https://computing.llnl.gov/tutorials/moab}",
 }
 
+@MISC{bbsim-github,
+        title = {{BBsim: a batch scheduler simulator for HPC systems equipped with burst buffer}},
+        author = {Jiaqi Yan},
+        year = {2016},
+        howpublished = "\url{https://github.com/littlepretty/BBSimulator}",
+}
+
 @MISC{apex-workflow,
 	 title = {{APEX Workflows}},
 	 author = {{LANL, NERSC, SNL}},
